<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intelligent Data Synchronizer</string>
    <string name="app_name_abrev">I.D.S.</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_settings">Log Settings</string>
    <string name="action_sync_scheduler">Synchronization Scheduler</string>
    <string name="authenticator_account_type">com.smartbuilders.synchronizer.auth</string>
    <!--<string name="sync_adapter_content_authority">com.smartbuilders.ecommerce.syncadapter</string>-->
    <string name="signup_title">Create new account</string>
    <string name="login_label">Log in</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="start_sync">Start Synchronization</string>
    <string name="last_succesful_sync_label">Last Successful Sync</string>
    <string name="stop_sync">Stop Synchronization</string>
    <string name="sync_progress_label">Synchronization Progress</string>
    <string name="sync_progress_abrev_label">Sync Progress</string>
    <string name="account_manager">Account Manager</string>
    <string name="add_account">[+Add Account]</string>
    <string name="day_label">DAY</string>
    <string name="month_label">MONTH</string>
    <string name="year_label">YEAR</string>
    <string name="hour_label">HOUR</string>
    <string name="minute_label">MINUTE</string>
    <string name="wait_please">Wait Please</string>
    <string name="authenticating_user">Authenticating User</string>
    <string name="sync_scheduler_list_label">Synchronization Scheduler List</string>
    <string name="log_sync_label">Synchronization Log</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="title_activity_scheduler_manager">Scheduler Manager</string>
    <string name="add_sync_schedule">Add Synchronization Schedule</string>
    <string name="mandatory_fields_empty">You need to fill all the mandatory fields.</string>
    <string name="user_already_registered">User already registered in the application.</string>
    <string name="error_server_address_ioexception">The connection couldn\'t be established</string>
    <string name="error_server_address_malformedurlexception">The URL is not in a valid form</string>
    <string name="server">Server</string>
    <string name="server_address">Server Address</string>
    <string name="user">User</string>
    <string name="user_name">User Name</string>
    <string name="storage">Storage</string>
    <string name="use_external_storage">Use External Storage</string>
    <string name="external_storage_summary">Storing data in the external card</string>
    <string name="connection">Connection</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="auto_sync_network_mode">Auto Sync Mode</string>
    <string name="auto_sync_schedule">Auto Sync Schedule</string>
    <string name="days_in_log">Days In Log</string>
    <string name="auto_sync_network_options">Network Options</string>
    <string name="only_when_on_wifi">Only when on Wi-Fi</string>
    <string name="on_any_network">On any network</string>
    <string name="auto_sync_periodicity">Periodicity</string>
    <string name="auto_sync_summary">Run sync automatically</string>
    <string name="auto_sync_disabled">Auto sync disabled</string>
    <string name="auto_sync_network_mode_summary">Auto Sync Mode</string>
    <string name="auto_sync_schedule_summary">Auto Sync Schedule</string>
    <string name="days_in_log_summary">Quantity of days to keep in log</string>
    <string name="send_bug_report">Send Bug Report</string>
    <string name="bug_report">Bug Report</string>
    <string name="clean_log">Clean Log.</string>
    <string name="monday_abrev">Mon</string>
    <string name="tuesday_abrev">Tue</string>
    <string name="wednesday_abrev">Wed</string>
    <string name="thursday_abrev">Thu</string>
    <string name="friday_abrev">Fri</string>
    <string name="saturday_abrev">Sat</string>
    <string name="sunday_abrev">Sun</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_every">Repeat Every</string>
    <string name="time">Time</string>
    <string name="sync_user_group">Synchronization User Group</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="app_logo">App Logo</string>
    <string name="new_user_authorized">New User Authorized</string>
    <string name="error_validating_user_return_null">Error validating user, query return null.</string>
    <string name="error_validating_user_response_move_to_next_false">Error validating user, response.moveToNext() is false in userSignIn.</string>
    <string name="user_authorized">User Authorized</string>
    <string name="user_not_authorized">User Not Authorized</string>
    <string name="user_wrong_password">User Wrong Password</string>
    <string name="user_not_exist_in_server">User Not Exist in Server</string>
    <string name="user_response_move_to_next_false">response.moveToNext() is false in userSignIn</string>
    <string name="user_session_token_null">Session token is null or 0-length</string>
    <string name="general_authorization_error">General Authorization Error</string>
    <string name="never">Never</string>
    <string name="every_hour">Every Hour</string>
    <string name="every_3_hours">Every 3 Hours</string>
    <string name="every_6_hours">Every 6 Hours</string>
    <string name="every_12_hours">Every 12 Hours</string>
    <string name="every_24_hours">Every 24 Hours</string>
    <string name="sync_started">Synchronization started</string>
    <string name="sync_finished">Synchronization finished.</string>
    <string name="sync_finished_duration">Synchronization finished, duration: %s.</string>
    <string name="sync_canceled">Synchronization canceled</string>
    <string name="zero_days">Zero Days.</string>
    <string name="one_day">One Day.</string>
    <string name="two_days">Two Days.</string>
    <string name="three_days">Three Days.</string>
    <string name="four_days">Four Days.</string>
    <string name="five_days">Five Days.</string>
    <string name="ten_days">Ten Days.</string>
    <string name="fifteen_days">Fifteen Days.</string>
    <string name="thirty_days">Thirty Days.</string>
    <string name="forever">Forever.</string>
    <string name="general_exception">GENERAL_EXCEPTION</string>
    <string name="io_exception">IO_EXCEPTION</string>
    <string name="operation_canceled_execption">OPERATION_CANCELED_EXCEPTION</string>
    <string name="xml_pull_parse_exception">XML_PULL_PARSE_EXCEPTION</string>
    <string name="no_log_message_registered">No log message registered.</string>
    <string name="authenticator_exception">AUTHENTICATOR_EXCEPTION</string>
    <string name="network_connection_unavailable">Network Connection Unavailable.</string>
    <string name="log_options">Log Options</string>
    <string name="email_client_label">Email Client:</string>
    <string name="no_email_client_installed_error">No Email Client Installed in Device</string>
    <string name="loading_log_file">Loading Log File</string>
    <string name="moving_database">Moving Data Base</string>
    <string name="database_moved_successfully">Data base was moved successfully.</string>
    <string name="executing_query">Executing Query</string>
    <string name="bug_report_email_message">Intelligent Data Synchronizer Bug Report Email Message.</string>
    <string name="bug_report_file_name">IDS_BugReport</string>
    <string name="external_storage_unavailable">External Storage not available or you don\'t have permission to write</string>
    <string name="scheduler_img_content_description">Auto Sync Scheduler</string>
    <string name="delete_schedule">Do you want to delete the Alarm?</string>
    <string name="clean_log_question">Do you want to clean the Synchronization Log?</string>
    <string name="alarm_already_set">Error creating Alarm, Alarm already set.</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="sql_console_for_user">User Database Query Console</string>
    <string name="sql_console_for_ids">IDS Database Query Console</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_sqlconsole">SQL Console</string>
    <string name="sql_sentence_label">SQL Sentence:</string>
    <string name="execute_query">Execute Query</string>
    <string name="starting_sync">Starting Synchronization</string>
    <string name="stoping_sync">Stoping Synchronization</string>
    <string name="dash_line">-</string>
    <string name="sync_duration">Synchronization Duration</string>
    <string name="log_clean_succesfully">The Log was clean successfully.</string>
    <string name="sync_in_progress">Synchronization in progress</string>
    <string name="sync_complete">Synchronization complete</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="sync_cancelled_by_user">Synchronization cancelled by user.</string>
    <string name="title_activity_notifications_manager">Notifications Manager</string>
	<string name="sql_sentence_empty">sql sentence is empty.</string>
	<string name="sentence_result_null">Sentence result is null.</string>
	<string name="log_image">Log image</string>
	<string name="sync_already_running_for_user">Synchronization is already running for user %s.</string>
</resources>
